# airdoctor

./: README.md  airdoctor.sh  pyproject.toml
src/airdoctor/: __main__.py  config.py  entrypoint.py  tools.py
src/airdoctor/plugins/helm/: __init__.py  helm.py
src/airdoctor/plugins/k8s/: __init__.py  k8s.py
src/airdoctor/plugins/logs/: __init__.py  logs.py
src/airdoctor/plugins/version/: __init__.py  version.py
